changed colors and fixed spacing for header

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,7 +1,9 @@
 .App {
+  background-color: #F7EDE2;
   text-align: center;
   display: flex;
   flex-direction: row;
+  color: #535C65;
 }
 
 .App-logo {
@@ -11,20 +13,62 @@
 }
 
 .App-header {
-  background-color: #fffbee;
+  background-color: #84a59d;
   min-height: 100vh;
+  max-height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: #595958;
+  color: #F1CBC6;
   position: relative;
+  padding-bottom: 0.5em;
 }
 
 .App-header-persona {
   max-height: 80vh;
   max-width: 80vh;
+  margin: 0.25em 0.25em 0em 0.5em;
+  position: static;
+}
+
+.App-header-nav {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 0.5em;
+}
+
+/* CSS */
+.App-button {
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  letter-spacing: 2px;
+  text-decoration: none;
+  text-transform: uppercase;
+  background-color: #F1CBC6;
+  color: #000;
+  cursor: pointer;
+  border: 3px solid;
+  padding: 0.25em 0.5em;
+  margin: 2em 1em 1em 1em;
+  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
+  position: relative;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.App-button:active {
+  box-shadow: 0px 0px 0px 0px;
+  top: 5px;
+  left: 5px;
+}
+
+@media (min-width: 768px) {
+  .App-button {
+    padding: 0.25em 0.75em;
+  }
 }
 
 .App-header-persona-element {
@@ -34,7 +78,10 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #F1CBC6;
+  text-decoration: none;
+  font-style: italic;
+  padding-bottom: 0.1em;
 }
 
 @media only screen and (max-width: 600px) {
@@ -46,3 +93,5 @@
     display: none;
   }
 }
+
+
